Updated polity to properly include base (non static modifier) values for fame, infamy, and unrest

--- a/polity/templates/polity/polity_details.html
+++ b/polity/templates/polity/polity_details.html
@@ -128,13 +128,9 @@
                         <td class="tb_lcell">{{ polity.defense.source_summary }}</td>
                     </tr>
                     <tr>
-                        <td class="tb_lcell"><h4>UNREST INCREMENT</h4></td>
-                        <td class="tb_ccell">{{ polity.unrest_mod.total }}</td>
-                        <td class="tb_lcell">{{ polity.unrest_mod.source_summary }}</td>
-                    </tr>
-                    <tr>
                         <td class="tb_lcell"><h4>UNREST</h4></td>
-                        <td class="tb_ccell">{{ polity.unrest }}</td>
+                        <td class="tb_ccell">{{ polity.unrest.total }}</td>
+                        <td class="tb_lcell">{{ polity.unrest.source_summary }}</td>
                     </tr>
                 </tbody>
             </table>
