Added building modifiers for festivals. Updated noble ranks to take the "estate" into account and adjusted accordingly.

--- a/people/templates/people/base.html
+++ b/people/templates/people/base.html
@@ -4,6 +4,9 @@
 
 {% block subnav_items %}
     <li class="disabled"><a href="#">|</a></li>
+    <li role="presentation"><a href="{% url 'people:people' %}">
+        People
+    </a></li>
     <li role="presentation"><a href="{% url 'people:noble_ranks' %}">
         Noble Ranks
     </a></li>
