--- a/polity/templates/polity/polities.html
+++ b/polity/templates/polity/polities.html
@@ -7,9 +7,9 @@
     <th class="th_ccell"><h4>FORM OF GOVERNMENT</h4></th>
     <th class="th_ccell"><h4>ALIGNMENT</h4></th>
     <th class="th_ccell"><h4>TREASURY</h4></th>
-    <th class="th_ccell"><h4>UNREST</h4></th>
-    <th class="th_ccell"><h4>FAME</h4></th>
-    <th class="th_ccell"><h4>INFAMY</h4></th>
+    <th class="th_ccell"><h4>BASE UNREST</h4></th>
+    <th class="th_ccell"><h4>BASE FAME</h4></th>
+    <th class="th_ccell"><h4>BASE INFAMY</h4></th>
     <th class="th_ccell"><h4>TAX LEVEL</h4></th>
     <th class="th_ccell"><h4>ATTITUDE</h4></th>
     <th class="th_ccell"><h4>HOLIDAY FREQUENCY</h4></th>
