Added trade app with trade routes and basic bonuses to polity.

--- a/templates/base.html
+++ b/templates/base.html
@@ -62,6 +62,7 @@
                             Territories
                         </a>
                     </li>
+                    <li role="presentation"><a href="{% url 'trade:trade_routes' %}">Trade</a></li>
                     {% block subnav_items %}{% endblock %}
                 </ul>
                 <ul class="nav nav-pills navbar-right">
