Added minor polity attributes modifier calculation. Modifiers showed on polity details.

--- a/polity/templates/polity/polity_details.html
+++ b/polity/templates/polity/polity_details.html
@@ -82,14 +82,14 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td class="tb_ccell">{{ polity.fame.total }}</td>
-                        <td class="tb_ccell">{{ polity.infamy.total }}</td>
-                        <td class="tb_ccell">{{ polity.corruption.total }}</td>
-                        <td class="tb_ccell">{{ polity.crime.total }}</td>
-                        <td class="tb_ccell">{{ polity.law.total }}</td>
-                        <td class="tb_ccell">{{ polity.lore.total }}</td>
-                        <td class="tb_ccell">{{ polity.productivity.total }}</td>
-                        <td class="tb_ccell">{{ polity.society.total }}</td>
+                        <td class="tb_ccell">{{ polity.fame.total }} ({{ polity.fame_mod }})</td>
+                        <td class="tb_ccell">{{ polity.infamy.total }} ({{ polity.infamy_mod }})</td>
+                        <td class="tb_ccell">{{ polity.corruption.total }} ({{ polity.corruption_mod }})</td>
+                        <td class="tb_ccell">{{ polity.crime.total }} ({{ polity.crime_mod }})</td>
+                        <td class="tb_ccell">{{ polity.law.total }} ({{ polity.law_mod }})</td>
+                        <td class="tb_ccell">{{ polity.lore.total }} ({{ polity.lore_mod }})</td>
+                        <td class="tb_ccell">{{ polity.productivity.total }} ({{ polity.productivity_mod }})</td>
+                        <td class="tb_ccell">{{ polity.society.total }} ({{ polity.society_mod }})</td>
                     </tr>
                     <tr>
                         <td class="tb_lcell">{{ polity.fame.source_summary }}</td>
