--- a/factions/templates/factions/base.html
+++ b/factions/templates/factions/base.html
@@ -4,5 +4,5 @@
 
 {% block subnav_items %}
     <li class="disabled"><a href="#">|</a></li>
-    <li role="presentation"><a href="{% url 'polity:polities' %}">Polities</a></li>
+    <li role="presentation"><a href="{% url 'factions:factions' %}">Factions</a></li>
 {% endblock %}
