--- a/polity/templates/polity/base.html
+++ b/polity/templates/polity/base.html
@@ -5,4 +5,5 @@
 {% block subnav_items %}
     <li class="disabled"><a href="#">|</a></li>
     <li role="presentation"><a href="{% url 'polity:polities' %}">Polities</a></li>
+    <li role="presentation"><a href="{% url 'polity:log_entries' %}">Log</a></li>
 {% endblock %}
